--- a/view/css/style.css
+++ b/view/css/style.css
@@ -1,31 +1,345 @@
-.loader {
-    margin: 20px 20px;
-    border: 5px solid white; /* Light grey */
-    border-top: 5px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 10px;
-    height: 10px;
-    animation: spin 2s linear infinite;
-    display: none;
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
-  
-  * {
-    background-color: #d0f5f3;
-  }
 
-  input {
-    border: 1px solid black;
-    width: 200px;
+html,body {
+    font-family: 'Archivo Narrow', sans-serif;
+    font-size:15px;
+    line-height: 1.5;
+    color: #333333;
+}
+
+
+/*########################################*/
+/*             Discord Embed              */
+/*########################################*/
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid #fff;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #cecece transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
   }
-  table {
-    margin-top: 20px;
+  100% {
+    transform: rotate(360deg);
   }
-  tr, td {
-    border: 1px solid black;
-    padding: 10px;
-  }
+}
+
+#discord-embed {
+	display: webkit-box;
+	display: ms-flexbox;
+	display: flex;
+	-webkit-box-align: stretch;
+	-ms-flex-align: stretch;
+	align-items: stretch;
+	-webkit-box-pack: start;
+	-ms-flex-pack: start;
+	justify-content: flex-start;
+	width: 100%;
+	height:40rem;
+	-webklit-box-flex: 1;
+	-ms-flex: 1 1 auto;
+	flex: 1 1 auto;
+	box-sizing: border-box;
+	font-family: 'Open Sans';
+	border: 3px solid #f7f7f7;
+	border-style: inset;
+	background: #36393f;
+	overflow: hidden;
+}
+
+#discord-embed #discord-channel-wrapper {
+	flex-direction: column;
+	width: 240px;
+	-webkit-box-flex: 0;
+	-ms-flex: 0 0 auto;
+	flex: 0 0 auto;
+	background: #2f3136;
+	min-height: 600px;
+	display: flex;
+	margin-left: 0;
+	transition: margin-left 1s;
+}
+
+#discord-embed #discord-channel-wrapper #discord-channels {
+	display: flex;
+	flex-direction: column;
+	-webkit-box-flex: 0;
+	-ms-flex: 0 0 auto;
+	flex: 0 0 auto;
+	align-self: flex-start;
+	background: transparent;
+	width: 100%;
+}
+
+#discord-embed #discord-channel-wrapper #channel-header {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	min-height: 48px;
+	-webkit-box-shadow: rgba(4, 4, 5, 0.2) 0px 1px 0px 0px, rgba(6, 6, 7, 0.05) 0px 1.5px 0px 0px, rgba(4, 4, 5, 0.05) 0px 2px 0px 0px;
+	-moz-box-shadow: rgba(4, 4, 5, 0.2) 0px 1px 0px 0px, rgba(6, 6, 7, 0.05) 0px 1.5px 0px 0px, rgba(4, 4, 5, 0.05) 0px 2px 0px 0px;
+	box-shadow: rgba(4, 4, 5, 0.2) 0px 1px 0px 0px, rgba(6, 6, 7, 0.05) 0px 1.5px 0px 0px, rgba(4, 4, 5, 0.05) 0px 2px 0px 0px;
+	padding-left: 16px;
+	padding-right: 16px;
+}
+
+#discord-embed #discord-channel-wrapper #channel-header div {
+	color: #fff;
+	font-weight: 700;
+}
+
+#discord-embed #discord-channel-wrapper #discord-user {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	max-height: 52px;
+	background: #292b2f;
+	margin-top: auto;
+}
+
+#discord-embed #discord-channel-wrapper #discord-channels .category {
+	padding-top: 16px;
+	padding-left: 12px;
+	color: #8e9297;
+	font-size: 12px;
+	font-weight: 600;
+	text-transform: uppercase;
+	cursor: default;
+}
+
+#discord-embed #discord-channel-wrapper #discord-channels .channel {
+	margin-left: 8px;
+	margin-right: 8px;
+	padding-left: 8px;
+	padding-right: 8px;
+	border-radius: 4px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	height: 32px;
+	cursor: pointer;
+}
+
+#discord-embed #discord-channel-wrapper #discord-channels .channel .hash svg {
+	margin-top: 8px;
+}
+
+
+#discord-embed #discord-channel-wrapper #discord-channels .channel:hover {
+	background: #34373c;
+}
+
+#discord-embed #discord-channel-wrapper #discord-channels .channel.active {
+	background: #393c43;	
+}
+
+#discord-embed #discord-channel-wrapper #discord-channels .channel div {
+	color: #8e9297;
+	
+}
+
+#discord-embed #discord-channel-wrapper #discord-channels .channel .label {
+	font-size: 16px;
+	font-weight: 500;
+	text-transform: lowercase;
+}
+
+#discord-embed #discord-channel-wrapper #discord-channels .channel:hover .label {
+	color: #dbddde;
+}
+#discord-embed #discord-channel-wrapper #discord-channels .channel.active .label {
+	color: #fff;
+}
+#discord-embed #discord-chat-wrapper {
+	display: flex;
+	flex-direction: column;
+	min-height: 0;
+	-webkit-box-flex: 0;
+	-ms-flex: 0 0 auto;
+	flex: 1 1 auto;
+	background: #36393f;
+	flex-grow: 1;
+	align-self: flex-end;
+	height: 600px;
+	overflow: hidden;
+}
+
+#discord-embed #discord-chat-wrapper #chat-header {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	min-height: 48px;
+	-webkit-box-shadow: rgba(4, 4, 5, 0.2) 0px 1px 0px 0px, rgba(6, 6, 7, 0.05) 0px 1.5px 0px 0px, rgba(4, 4, 5, 0.05) 0px 2px 0px 0px;
+	-moz-box-shadow: rgba(4, 4, 5, 0.2) 0px 1px 0px 0px, rgba(6, 6, 7, 0.05) 0px 1.5px 0px 0px, rgba(4, 4, 5, 0.05) 0px 2px 0px 0px;
+	box-shadow: rgba(4, 4, 5, 0.2) 0px 1px 0px 0px, rgba(6, 6, 7, 0.05) 0px 1.5px 0px 0px, rgba(4, 4, 5, 0.05) 0px 2px 0px 0px;
+	padding-left: 12px;
+	padding-right: 12px;
+}
+
+#discord-embed #discord-chat-wrapper #chat-header .active-channel {
+	color: #fff;
+	font-weight: 700;
+}
+
+#discord-embed #discord-chat-wrapper #chat-header div {
+	color: #8e9297;
+}
+
+#discord-embed #discord-chat-wrapper #chat-header .hash {
+	margin-top: 7px;
+	margin-right: 5px;
+}
+
+#discord-embed #discord-chat-wrapper #discord-chat {
+	overflow-y: auto;
+	display: block;
+	flex-direction: column;
+	width: 99.5%;
+  flex-grow: 1;
+}
+
+#discord-chat::-webkit-scrollbar-track {
+  background-color: #2e3338;
+  border: none;
+}
+ 
+#discord-chat::-webkit-scrollbar-thumb {
+  background-color: #202225;
+  outline: none;
+  border-radius: 4px;
+}
+
+#discord-chat::-webkit-scrollbar {
+  width: 10px;
+}
+
+.discord-channel-log .message {
+	display: flex;
+	flex-direction: row;
+	flex-grow: 0;
+	width: 100%;
+	padding-top: 2px;
+	padding-bottom: 2px;
+}
+
+.discord-channel-log .message.top {
+	margin-top: 17px;	
+}
+
+#discord-embed #discord-chat-wrapper #discord-chat .discord-channel-log {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	align-items: flex-start;
+	position: relative;
+	min-height: 492px;
+	justify-content: flex-end;
+	
+}
+
+
+ 
+.discord-channel-log .message:hover {
+	background: #32353b;
+}
+
+.discord-channel-log .message .avatar {
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	overflow: hidden;
+	margin-left: 16px;
+	margin-right: 16px;
+	flex: 0 0 auto;
+}
+
+.discord-channel-log .message .avatar-spacer {
+    width: 72px;
+    text-align: center;
+    color: transparent;
+    font-size: 11px;
+    padding-top: 4px;
+    flex: 0 0 auto;
+}
+
+.discord-channel-log .message:hover .avatar-spacer {
+    color: #72767d;
+}
+
+.discord-channel-log .message .content {
+	margin-left: -72px;
+	padding-left: 72px;
+	margin-right: 48px;
+	display: flex;
+	flex-direction: column;
+}
+
+.discord-channel-log .message .content .username {
+	color: #fff;
+	padding-right: 4px;
+}
+
+.discord-channel-log .message .content .timestamp {
+	font-size: 11px;
+	color: #72767d;
+	padding-left: 4px;
+}
+
+
+.discord-channel-log .message .content .text {
+	color: #dcddde;
+}
+
+#discord-embed #discord-chat-wrapper #discord-chat .discord-channel-log .scroll-spacer {
+	height: 30px;
+}
+
+#discord-embed #discord-chat-wrapper #discord-input {
+	width: 100%;
+	padding-left: 16px;
+	padding-right: 16px;
+	border-radius: 8px;
+}
+
+#discord-embed #discord-chat-wrapper #discord-input input {
+	height: 44px;
+	border-radius: 8px;
+	background: #40444b;
+	color: #dcddde;
+	margin-bottom:16px;
+	border: none;
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+}
+
+#discord-embed #discord-chat-wrapper #discord-input input:active {
+	border: none;
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+}
+
